[22] upgrade to jdk 22, commit 1